# agentic-life-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-guide.md  concept-brief.md  demo-script.md  linkedin-launch.md
examples/: money-batch.json  time-batch.json  time-budget-adjustment.json
scripts/: privacy_check.py
src/agentic_life_os/: __main__.py  app.py  cli.py  db.py  schema.sql  service.py
src/agentic_life_os/static/: app.css  app.js
src/agentic_life_os/templates/: index.html
tests/: conftest.py  test_budget_adjustments.py  test_money.py  test_privacy.py  test_time.py  test_today.py
