[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-life-os"
version = "0.1.0"
description = "A local-first personal operating system for Today, Time, and Money."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Agentic Life OS contributors" }]
dependencies = ["Flask>=3.0,<4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.9,<1.0"]

[project.scripts]
lifeos = "agentic_life_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_life_os = ["schema.sql", "templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
